add AdminLayout and UserLayout components; implement Providers for routing; update CSS for scrollbar styling; add dropdown menu dependency

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,6 +60,11 @@
 	}
 }
 
-.scrollbar-hidden::-webkit-scrollbar {
+:root::-webkit-scrollbar {
 	display: none;
+}
+
+:root {
+	scrollbar-width: none;
+	-ms-overflow-style: none;
 }
