--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 /* ... */
+.bg-repeat-this {
+	background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><circle cx='12' cy='12' r='10' /><circle cx='6' cy='6' r='2' /><circle cx='18' cy='6' r='2' /><circle cx='6' cy='18' r='2' /><circle cx='18' cy='18' r='2' /></svg>");
+	background-repeat: repeat;
+	background-size: 60px 60px;
+}
 
 @layer base {
 	:root {
