feat: add product editing and viewing functionality; implement product info and edit components; enhance product image handling in UI

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,15 @@
 	background-size: 60px 60px;
 }
 
+@layer components {
+	.img-card-sm {
+		@apply min-h-[100px] dark:bg-zinc-900 dark:border-transparent max-h-[100px] relative min-w-[100px] border border-gray-300 shadow-md rounded-md w-[100px];
+	}
+	.img {
+		@apply object-contain  w-full h-full;
+	}
+}
+
 @layer base {
 	:root {
 		--background: 342 100% 100%;
